[project]
name = "comfyui-mistralai-api"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/randomnoner11/ComfyUI-MistralAI-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MistralAI-API"
Icon = ""
