[project]
name = "comfyui-mistralai-api"
description = "Mistral AI API's chat completion endpoint in ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/randomnoner11/ComfyUI-MistralAI-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "randomnoner11"
DisplayName = "ComfyUI-MistralAI-API"
Icon = ""
